infra/k8s-dev/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"


spec:
  rules:
    - host: weconcert.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
                serviceName: payments-service
                servicePort: 3000
          - path: /api/users/?(.*)
            backend:
                serviceName: auth-service
                servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
                serviceName: tickets-service
                servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
                serviceName: orders-service
                servicePort: 3000
          - path: /        # Must stays as the bottom of the list !
            backend:
                serviceName: client-service
                servicePort: 3000
